--- a/slides.Rmd
+++ b/slides.Rmd
@@ -17,6 +17,7 @@ output:
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 knitr::opts_chunk$set(
+  fig.showtext = TRUE,
   fig.width=9, fig.height=3.5, fig.retina=3,
   out.width = "100%",
   cache = FALSE,
@@ -29,11 +30,59 @@ knitr::opts_chunk$set(
 
 ```{r xaringan-themer, include=FALSE, warning=FALSE}
 library(xaringanthemer)
+library(dplyr)
+library(dutchmasters)
+library(xaringanExtra)
+palette <- readRDS("data/palette.RDS")
+
+brick <- palette %>% filter(family == "brick", level == 1) 
+noil_black <- palette %>% filter(family == "noil_black", level == 1) 
+dutch_white <- palette %>% filter(family == "white", level == 30)
+acorn <- palette %>% filter(family == "acorn", level == 1)
+midnight <- palette %>% filter(family == "midnight", level == 1)
+seaweed <- palette %>% filter(family == "seaweed", level == 30)
+
 style_duo_accent(
-  primary_color = "#1381B0",
-  secondary_color = "#FF961C",
-  inverse_header_color = "#FFFFFF"
+  # basic colors
+  white_color = dutch_white$code,
+  black_color = noil_black$code,
+  footnote_color = midnight$code,
+  text_slide_number_color = midnight$code,
+  
+  # themed colors
+  primary_color = brick$code,
+  secondary_color = acorn$code,
+  inverse_header_color = "#FFFFFF",
+  link_color = seaweed$code,
+  link_decoration = "underline",
+  
+  # typography
+  text_font_google = google_font("Quicksand", "400"),
+  header_font_google = google_font("Forum","400"),
+  inverse_text_color = dutch_white$code,
+  text_font_weight = 300,
+  text_font_size = "28pt",
+  header_font_weight = "400",
+  header_h1_font_size = "70pt",
+  header_h2_font_size = "50pt",
+  header_h3_font_size = "40pt",
+  extra_css = list(
+    ".subtitle h2" = list("font-size" = "34pt",
+                          "font-family" = "var(--text-font-family)",
+                          "font-weight" = 300
+    ),
+    ".date h3, .author h3" = list(
+      "font-size" = "32pt",
+      "margin" = "0"
+    )
+  ),
+  
+  # etc.
+  outfile = "css/xaringan-themer.css"
 )
+
+
+xaringanExtra::use_tile_view()
 ```
 
 ## Typography
