--- a/supporting-materials.Rmd
+++ b/supporting-materials.Rmd
@@ -222,7 +222,7 @@ p + (p + scale_x_reverse())
 
 ### Watercolor style abstracts  
 
-```{r watercolor-plot, dpi = 300}
+```{r watercolor-plot, dpi = 300, cache = TRUE}
 load(file = "data/seed_state.RData")
 wat <- canvas_watercolors(colors = c(acorn(1),
                                      brick(1),
@@ -243,6 +243,9 @@ wat +
 
 ## Satisfying gif candidates  
 
+https://i.imgur.com/g5fnn24.mp4
+
+<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@fenitas.nl/video/7093892979659738373" data-video-id="7093892979659738373" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@fenitas.nl" href="https://www.tiktok.com/@fenitas.nl">@fenitas.nl</a> Reply to @m_aloma.3 <a target="_blank" title="♬ Better Together - Jack Johnson" href="https://www.tiktok.com/music/Better-Together-6939780361380366338">♬ Better Together - Jack Johnson</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
 
 <iframe id="reddit-embed" src="https://www.redditmedia.com/r/oddlysatisfying/comments/v4ue9y/this_transition_of_colour/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="620" width="640" scrolling="no"></iframe>
 
