more gift wrapping

--- a/supporting-materials.Rmd
+++ b/supporting-materials.Rmd
@@ -279,4 +279,6 @@ This entire pinterest https://www.pinterest.com/westwinges/_created/
 
 https://pin.it/4V7t4zy - green, plain box
 
+https://pin.it/17b4esj - tree, dark green on brown
+
 
