--- a/supporting-materials.Rmd
+++ b/supporting-materials.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Supporting materials
 date: '`r Sys.Date()`'
-output: github_document
+output: html_document
 ---
 
 ```{r, include = FALSE}
