--- a/slides.Rmd
+++ b/slides.Rmd
@@ -15,10 +15,11 @@ output:
       highlightStyle: github
       highlightLines: true
       ratio: 16:9
-      countIncrementalSlides: true
+      countIncrementalSlides: false
 ---
 ```{r setup, include=FALSE}
-options(htmltools.dir.version = FALSE)
+options(htmltools.dir.version = FALSE,
+        crayon.enabled = TRUE)
 knitr::opts_chunk$set(
   fig.showtext = TRUE,
   fig.width = 9, 
@@ -30,6 +31,10 @@ knitr::opts_chunk$set(
   message = FALSE, 
   warning = FALSE,
   hiline = TRUE
+)
+
+old_hooks <- fansi::set_knit_hooks(knitr::knit_hooks,
+  which = c("output", "message", "error")
 )
 ```
 
@@ -48,7 +53,7 @@ palette <- readRDS("data/palette.RDS")
 
 brick <- palette %>% filter(family == "brick", level == 1) 
 noil_black <- palette %>% filter(family == "noil_black", level == 1) 
-dutch_white <- palette %>% filter(family == "white", level == 40)
+dutch_white <- palette %>% filter(family == "white", level == 45)
 acorn <- palette %>% filter(family == "acorn", level == 1)
 midnight <- palette %>% filter(family == "midnight", level == 1)
 clay <- palette %>% filter(family == "clay", level == 1)
@@ -56,6 +61,7 @@ seaweed <- palette %>% filter(family == "seaweed", level == 25)
 
 style_duo_accent(
   # basic colors
+  text_slide_number_font_size = 0,
   white_color = dutch_white$code,
   black_color = noil_black$code,
   footnote_color = midnight$code,
@@ -109,7 +115,10 @@ style_duo_accent(
       "font-weight" = "bold",
       "color" = "var(--text-bold-color)",
       "text-decoration" = "underline"
-    )
+    ),
+    ".pull-right + *" = list(
+      "clear"= "none")
+    
   ),
   title_slide_background_image = "../../supporting-materials_files/figure-html/watercolor-plot-1.png",
   # etc.
@@ -126,39 +135,91 @@ xaringanExtra::use_banner(
                text_color = midnight$code))
 ```
 
-# I found myself
-comparing the number of axels to expected weight in commercial freight trucks in the state of Minnesota 
-
 .center[
-<img src="assets/fig/mndot_4plus_single.png" alt="A black and white line art illustration of a truck" style="transform: scaleX(-1);">
-]
+<img src="assets/fig/mndot_4plus_single.png" alt="A black and white line art illustration of a truck" style="transform: scaleX(-1);">]
+<!-- I went to open the existing materials, and -->
+--
+.center[
+## it was bad]
 <!-- This project was pitched to me as a quick data science win.  -->
 <!-- It would be straightforward, simple, and logical -->
 <!-- We are just updating some data -->
+<!-- This was a lie.  -->
+<!-- In fact, what was left to me was a mess -->
+---
+
+## ...how bad?
+<!-- You might be asking, why is this so bad? -->
+<!-- and because there are so many and you can't read the text, let me describe it -->
+<!-- we have several things going on -->
+--
+.pull-left[
+<img src="assets/fig/extant-dirs.png" alt="A screenshot of many files" style="max-width: 75%">
+] 
+--
+.pull-right[
+<!-- Which one is *actually* the final one? Is it the most recent chronologically or
+the most recently opened or edited? -->
+<li>Multiple final reports</li>
+]
+--
+.pull-right[
+<!-- some document are marked as revised
+but who revised them, and why were they revised?
+-->
+<li>"revised" documents</li>
+]
+--
+.pull-right[
+<!-- In this excel document, there are several sheets with interdependent formulas
+One sheet has over 15,000 rows! -->
+<li>one Excel document, with all the analysis</li>
+]
+
 ---
 ## Internet phenomenon, of oddly statisfying things
 
-- objects fitting perfectly into other objects
-- perfect cake decoration
+--
+- objects fitting perfectly into other objects  
+
+--
+- perfect cake decoration   
+
+--
 - pressure washing very dirty things  
 
 ---
-class: animated fadeInUp
-
-
+--
 .pull-left[
 ### Smoothie!
 <video id="smoothie" controls muted height="400px" width="500px">
 <source src="assets/fig/smoothie_satisfying.mp4" type="video/mp4">
 </video>
 ]
-
+--
 .pull-right[
 ### Tarts!
 <video id="tart-icing" controls muted height="400px" width="500px">
 <source src="assets/fig/tart_icing.mp4" type="video/mp4">
 </video>
 ]
+
+---
+
+.pull-left[
+so I decided to take my truck,  
+.center[
+<img src="assets/fig/mndot_4plus_single.png" alt="A black and white line art illustration of a truck" style="transform: scaleX(-1);">]
+]
+
+--
+.pull-right[
+and make it the best truck  
+.center[
+<img src="assets/fig/mndot_4plus_single.png" alt="A black and white line art illustration of a truck" style="transform: scaleX(-1);">
+]]
+
+
 ---
 class: inverse center middle
 
@@ -172,11 +233,12 @@ class: inverse center middle
 
 --
 
-- Keep a list of all the things you dislike  
+- Keep a list of all the things you hate    
 
 --
 <!-- You may find yourself in a place where the long-form PDF documentation doesn't align with what is happening in an Excel workbook -->
-<!-- This is the time to resolve that, and start -->
+<!-- This is the time to resolve that, and start thinking 
+about how you want to -->
 - Replicate findings/results
 
 ---
@@ -232,14 +294,54 @@ class: inverse center middle
 
 ## Complete the work, document along the way
 
+--
+
 > Documentation is a love letter to your future self.  - Damien Conway 
 
+---
+### Modularize
 
+No single script more than 500 lines  
 
+--
+.pull-left[
+<!-- here, we have a bulky script that may do more than we actually need it to  -->
+```{r, eval=FALSE}
+all_prop_corridors <- corridors %>% 
+  filter(proposed == TRUE)
+proposed_conflation_match <- purrr::map_dfr(
+  1:nrow(all_prop_corridors),
+  function(x) {
+    first_join <- sf::st_join(
+      all_prop_corridors[x, ],
+      aadt %>%
+        unique(),
+      largest = FALSE,
+      left = TRUE)
+    ...
+  })
+```
+]
+
+--
+.pull-right[
+<!-- here, we've broken out each script into its core functions.
+I can call load_pkgs.R from anywhere, and I know it will JUST call library().
+You can also use numeric prefixes 00, 01, 02 to denote sequential operations-->
+```{r, eval=FALSE}
+source("load_pkgs.R")
+source("load_data.R")
+source("01_conflate_corridors.R")
+source("02_score_clusters.R")
+source("03_score_facilities.R")
+```
+
+]
 ---
 class: inverse center middle
 
-# Leave a gift, not a mystery
+# Leave a gift, 
+## not a mystery
 
 ---
 ## Post project debrief
@@ -252,6 +354,72 @@ class: inverse center middle
 .pull-right[
 <!-- Once the project is complete, and really truly complete, take a break -->
 - You should be a slightly different person than when you closed the project
+]
+---
+
+.pull-left[
+## Yikes
+<!-- here we have all the intermediate rmarkdowns I wrote when I was evaluating the project and conducting the analysis.  -->
+<!-- A lot of these were dead ends, and I don't need them taking up space in the future. -->
+```{r, results='asis',echo=FALSE}
+cat(htmltools::htmlPreserve("&lt;PRE class='fansi fansi-output'&gt;&lt;CODE&gt;## &lt;span style='color: #0000BB; font-weight: bold;'&gt;../../MTS/truck-corridor-study/&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00;'&gt;00_sample_corridors.Rmd&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00;'&gt;01_conflate_corridors.Rmd&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00;'&gt;02_calibrate_streetlight.Rmd&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00;'&gt;03_review_streetlight.Rmd&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00;'&gt;04_calibrate_fun_classes.Rmd&lt;/span&gt;
+## ├── 04_calibrate_fun_classes.html
+## ├── &lt;span style='color: #00BB00;'&gt;05_compare_scores.Rmd&lt;/span&gt;
+## ├── 05_compare_scores.html
+## ├── &lt;span style='color: #00BB00;'&gt;06_generate_deliverables.Rmd&lt;/span&gt;
+## ├── 06_generate_deliverables.html
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;06_generate_deliverables_files&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00;'&gt;07_review_corridors.Rmd&lt;/span&gt;
+## ├── 07_review_corridors.html
+## ├── &lt;span style='color: #00BB00;'&gt;08_corridor_additions.Rmd&lt;/span&gt;
+## ├── 08_corridor_additions.html
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;R&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00; font-weight: bold;'&gt;README.Rmd&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00; font-weight: bold;'&gt;README.md&lt;/span&gt;
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;Tableau&lt;/span&gt;
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;data&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00; font-weight: bold;'&gt;initial_assessment.Rmd&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00; font-weight: bold;'&gt;initial_assessment.html&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00; font-weight: bold;'&gt;logo.png&lt;/span&gt;
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;output&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00;'&gt;potential_corridor_additions.R&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00; font-weight: bold;'&gt;references.bib&lt;/span&gt;
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;scrap&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00; font-weight: bold;'&gt;style.css&lt;/span&gt;
+## └── &lt;span style='color: #00BB00; font-weight: bold;'&gt;truck-corridor-study.Rproj&lt;/span&gt;
+&lt;/CODE&gt;&lt;/PRE&gt;"))
+```
+]
+--
+.pull-right[
+## Yes
+<!-- here, I have dramatically reduced the number of markdowns, down to just three core documents -->
+<!-- A README, a Summary, and Methods -->
+```{r, results='asis', echo=F}
+cat(htmltools::htmlPreserve("&lt;PRE class='fansi fansi-output'&gt;&lt;CODE&gt;## &lt;span style='color: #0000BB; font-weight: bold;'&gt;../../MTS/truck-corridor-study/&lt;/span&gt;
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;R&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00; font-weight: bold;'&gt;README.Rmd&lt;/span&gt;
+## ├── README.md
+## ├── &lt;span style='color: #00BB00;'&gt;Summary.Rmd&lt;/span&gt;
+## ├── Summary.html
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;Summary_files&lt;/span&gt;
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;Tableau&lt;/span&gt;
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;data&lt;/span&gt;
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;figures&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00; font-weight: bold;'&gt;logo.png&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00;'&gt;methods.Rmd&lt;/span&gt;
+## ├── methods.html
+## ├── &lt;span style='color: #0000BB; font-weight: bold;'&gt;scrap&lt;/span&gt;
+## ├── &lt;span style='color: #00BB00; font-weight: bold;'&gt;style.css&lt;/span&gt;
+## └── &lt;span style='color: #00BB00; font-weight: bold;'&gt;truck-corridor-study.Rproj&lt;/span&gt;
+&lt;/CODE&gt;&lt;/PRE&gt;
+"))
+```
 ]
 ---
 ## Not only **what**, but **why**
