--- a/assets/packages.bib
+++ b/assets/packages.bib
@@ -81,8 +81,9 @@
 @Manual{R-xaringanthemer,
   title = {xaringanthemer: Custom xaringan CSS Themes},
   author = {Garrick Aden-Buie},
-  year = {2022},
-  note = {https://pkg.garrickadenbuie.com/xaringanthemer/},
+  year = {2021},
+  note = {R package version 0.4.1},
+  url = {https://CRAN.R-project.org/package=xaringanthemer},
 }
 
 @Book{knitr2015,
